--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+      - develop
+      - ci/build
 
 env:
   REGISTRY: 917848404243.dkr.ecr.eu-central-1.amazonaws.com
@@ -46,11 +48,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/arm/v6,linux/arm/v7,linux/amd64,linux/arm64
           file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
         
       - name: Upload image to ECR
         uses: appleboy/docker-ecr-action@master
